# osoznanie-ai

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  artifact_integrity.py  audit_contracts.py  audit_paths.py  audit_policy.py  claims.py  decision_paths.py  evaluate.py  filter_contracts.py  fixtures.py  models.py  path_contracts.py  playwright_memory.py  playwright_pages.py  policies.py  report_contracts.py  run.py  run_playwright_memory.py  run_simulation.py  simulate.py  simulation_fixtures.py  simulation_models.py  strategies.py
docs/: action-attempts-v0.1.md  atomic-artifact-integrity-v0.1.md  atomic-integrity-hardening-note.md  atomic-memory-commits-v0.1.md  audited-decision-orchestrator-v0.1.md  benchmark-correctness-plan.md  benchmark-design-v0.1.md  bitemporal-access-control-v0.1.md  bitemporal-memory-view-v0.1.md  consolidation-engine-v0.1.md  decision-path-graphs-v0.1.md  decision-simulation-design-v0.1.md  decision-traces.md  filter-diagnostics-v0.1.md  lesson-application-adr-v0.1.md  manifesto.md  memory-object-v0.1.md  playwright-qa-benchmark.md  protocol-v0.1-recall-amendment.md  protocol-v0.1.md  qa-demo-proof-v0.1.md  qa-release-demonstrator.md  ranking-policy-v0.2.md  recall-design-v0.1.md  recall-review-resolution.md  transactional-action-outbox-v0.1.md  worker-dispatcher-v0.1.md
examples/: __init__.py  qa_agent_demo.py  qa_release_demo.py
schemas/: README.md  commitment.schema.json  criterion-evaluation.schema.json  decision-trace.schema.json  decision.schema.json  event.schema.json  evidence.schema.json  (+11 more)
(+94 files in other folders)
