[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "osoznanie-ai"
version = "0.1.0a1"
description = "Experience, reflection, and evolving identity for persistent AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alexey Safonov" }
]
dependencies = [
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
browser = ["playwright>=1.60,<2"]
dev = [
  "jsonschema>=4.23,<5",
  "pydantic==2.13.4",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/osoznanie"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
markers = ["playwright: optional browser integration test"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/osoznanie/action_finalizer.py" = ["F401"]
